--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
@@ -7,23 +7,27 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:co="http://java.sun.com/jsf/composite"
-	xmlns:j="http://sf.net/jdnp3/facelets">
+	xmlns:j="http://sf.net/jdnp3/facelets"
+	xmlns:p="http://primefaces.org/ui">
 	
 <co:interface>
-	<co:attribute name="pid" />
-	<co:attribute name="title" />
+	<co:attribute name="point" />
 </co:interface>
 
 <co:implementation>
 	<ui:composition>
 		<div style="font-size: 0px;">
-			<j:slideswitch id="bi-#{cc.attrs.pid}-state" title="State" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'active')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-cf" title="Chatter Filter" abbreviation="CF" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'chatterFilter')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-lf" title="Local Forced" abbreviation="LF" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'localForced')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-rf" title="Remote Forced" abbreviation="RF" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'remoteForced')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-cl" title="Communications Lost" abbreviation="CL" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'communicationsLost')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-rs" title="Restart" abbreviation="RS" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'restart')" disabled="true" />
-			<j:dipswitch id="bi-#{cc.attrs.pid}-ol" title="Online" abbreviation="OL" onclick="requestChangeValue('bi-#{cc.attrs.pid}', 'online')" disabled="true" />
+			<j:slideswitch id="bi-#{cc.attrs.point.index}-state" title="State" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'active')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-cf" title="Chatter Filter" abbreviation="CF" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'chatterFilter')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-lf" title="Local Forced" abbreviation="LF" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'localForced')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-rf" title="Remote Forced" abbreviation="RF" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'remoteForced')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-cl" title="Communications Lost" abbreviation="CL" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'communicationsLost')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-rs" title="Restart" abbreviation="RS" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'restart')" disabled="true" />
+			<j:dipswitch id="bi-#{cc.attrs.point.index}-ol" title="Online" abbreviation="OL" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'online')" disabled="true" />
+			<div class="menu-button" style="font-size: 14px; display: inline-block; width: 34px; height: 42px; overflow: hidden;">
+				<p:commandButton style="width: 100%; height: 100%" id="bi-options#{id}" value="" type="button" icon="ui-icon-extlink" />
+				<p:tieredMenu model="#{uiBinaryPointMenu.constructMenu(cc.attrs.point)}" overlay="true" trigger="bi-options#{id}" my="left top" at="left bottom" />
+			</div>
 		</div>
 	</ui:composition>
 </co:implementation>
