Added components to allow for the adjusting of variations.

--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -38,18 +38,18 @@
 						</p:panelGrid>
 					</p:panel>
 				</div>
-				<div style="text-align: center; display: inline-block;">
-					<p:panel header="Analogue Input">
-						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<h:outputText style="margin-right: 10px" value="Pt0" /><jdnp3:analogInput id="p7" title="hello" />
-							<h:outputText style="margin-right: 10px" value="Pt1" /><jdnp3:analogInput id="p8" />
-							<h:outputText style="margin-right: 10px" value="Pt2" /><jdnp3:analogInput id="p9" />
-							<h:outputText style="margin-right: 10px" value="Pt3" /><jdnp3:analogInput id="p10" />
-							<h:outputText style="margin-right: 10px" value="Pt4" /><jdnp3:analogInput id="p11" />
-							<h:outputText style="margin-right: 10px" value="Pt5" /><jdnp3:analogInput id="p12" />
-						</p:panelGrid>
-					</p:panel>
-				</div>
+<!-- 				<div style="text-align: center; display: inline-block;"> -->
+<!-- 					<p:panel header="Analogue Input"> -->
+<!-- 						<p:panelGrid style="margin: auto; text-align: right;" columns="2"> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt0" /><jdnp3:analogInput id="p7" title="hello" /> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt1" /><jdnp3:analogInput id="p8" /> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt2" /><jdnp3:analogInput id="p9" /> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt3" /><jdnp3:analogInput id="p10" /> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt4" /><jdnp3:analogInput id="p11" /> -->
+<!-- 							<h:outputText style="margin-right: 10px" value="Pt5" /><jdnp3:analogInput id="p12" /> -->
+<!-- 						</p:panelGrid> -->
+<!-- 					</p:panel> -->
+<!-- 				</div> -->
 			</p:outputPanel>
 		</h:form>
 	</f:view>
