--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
@@ -25,10 +25,31 @@
 			<j:dipswitch id="bi-#{cc.attrs.point.index}-rs" title="Restart" abbreviation="RS" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'restart')" disabled="true" />
 			<j:dipswitch id="bi-#{cc.attrs.point.index}-ol" title="Online" abbreviation="OL" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'online')" disabled="true" />
 			<div class="menu-button" style="font-size: 14px; display: inline-block; width: 34px; height: 42px; overflow: hidden;">
-				<p:commandButton style="width: 100%; height: 100%" id="bi-options#{id}" value="" type="button" icon="ui-icon-extlink" />
-				<p:tieredMenu model="#{uiBinaryPointMenu.constructMenu(cc.attrs.point)}" overlay="true" trigger="bi-options#{id}" my="left top" at="left bottom" />
+				<p:commandButton style="width: 100%; height: 100%" id="bi-options#{cc.attrs.point.index}" value="" type="button" icon="ui-icon-extlink" />
+				<p:tieredMenu overlay="true" trigger="bi-options#{cc.attrs.point.index}" my="left top" at="left bottom">
+					<p:menuitem value="Create Event" />
+					<p:separator />
+					<p:menuitem value="Edit" onclick="PF('bi-edit#{cc.attrs.point.index}').show();" />
+				</p:tieredMenu>
 			</div>
 		</div>
+		<p:dialog header="Binary Input #{cc.attrs.point.index}" widgetVar="bi-edit#{cc.attrs.point.index}" modal="true">
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+				<h:outputText value="Preferred Static Type:" />
+				<p:outputPanel>
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-0" title="Any" label="0" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-1" title="Packed" label="1" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-2" title="Flags" label="2" />
+				</p:outputPanel>
+				<h:outputText value="Preferred Event Type:" />
+				<p:outputPanel>
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-0" title="Any" label="0" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-1" title="Without Time" label="1" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-2" title="Absolute Time" label="2" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-3" title="Relative Time" label="3" />
+				</p:outputPanel>
+			</h:panelGrid>
+		</p:dialog>
 	</ui:composition>
 </co:implementation>
 </html>
