--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
@@ -26,10 +26,10 @@
 			<j:dipswitch id="bi-#{cc.attrs.point.index}-ol" title="Online" abbreviation="OL" onclick="requestChangeValue('bi-#{cc.attrs.point.index}', 'online')" disabled="true" />
 			<div class="menu-button" style="font-size: 14px; display: inline-block; width: 34px; height: 42px; overflow: hidden;">
 				<p:commandButton style="width: 100%; height: 100%" id="bi-options#{cc.attrs.point.index}" value="" type="button" icon="ui-icon-extlink" />
-				<p:tieredMenu overlay="true" trigger="bi-options#{cc.attrs.point.index}" my="left top" at="left bottom">
-					<p:menuitem value="Create Event" />
+				<p:tieredMenu id="bi-menu#{cc.attrs.point.index}" overlay="true" trigger="bi-options#{cc.attrs.point.index}" my="left top" at="left bottom">
+					<p:menuitem value="Create Event" onclick="$('[id$=&quot;bi-menu#{cc.attrs.point.index}&quot;]').toggle(); requestEvent('bi-#{cc.attrs.point.index}');" />
 					<p:separator />
-					<p:menuitem value="Edit" onclick="PF('bi-edit#{cc.attrs.point.index}').show();" />
+					<p:menuitem value="Edit" onclick="$('[id$=&quot;bi-menu#{cc.attrs.point.index}&quot;]').toggle(); PF('bi-edit#{cc.attrs.point.index}').show();" />
 				</p:tieredMenu>
 			</div>
 		</div>
