--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -10,6 +10,7 @@
 	xmlns:j="http://sf.net/jdnp3/facelets"
 	xmlns:jdnp3="http://java.sun.com/jsf/composite/jdnp3">
 <h:head>
+	<h:outputScript library="js" name="schedule.js" />
 	<h:outputScript library="js" name="main.js" />
 </h:head>
 
