--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryInput.xhtml
@@ -41,18 +41,18 @@
 					<j:eventbutton id="bi-#{cc.attrs.point.index}-cl-2" title="Class 2" label="2" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventClass', 2)" disabled="true" />
 					<j:eventbutton id="bi-#{cc.attrs.point.index}-cl-3" title="Class 3" label="3" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventClass', 3)" disabled="true" />
 				</p:outputPanel>
-				<h:outputText value="Preferred Static Type:" />
+				<h:outputText value="Preferred Static Type" />
 				<p:outputPanel>
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-0" title="Any" label="0" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticVariation', 0)" disabled="true" />
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-1" title="Packed" label="1" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticVariation', 1)" disabled="true" />
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-2" title="Flags" label="2" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticVariation', 2)" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-0" title="Any" label="0" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticType', {'group': 1, 'variation': 0})" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-1" title="Packed" label="1" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticType', {'group': 1, 'variation': 1})" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-st-2" title="Flags" label="2" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'staticType', {'group': 1, 'variation': 2})" disabled="true" />
 				</p:outputPanel>
 				<h:outputText value="Preferred Event Type:" />
 				<p:outputPanel>
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-0" title="Any" label="0" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventVariation', 0)" disabled="true" />
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-1" title="Without Time" label="1" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventVariation', 1)" disabled="true" />
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-2" title="Absolute Time" label="2" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventVariation', 2)" disabled="true" />
-					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-3" title="Relative Time" label="3" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventVariation', 3)" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-0" title="Any" label="0" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventType', {'group': 2, 'variation': 0})" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-1" title="Without Time" label="1" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventType', {'group': 2, 'variation': 1})" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-2" title="Absolute Time" label="2" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventType', {'group': 2, 'variation': 2})" disabled="true" />
+					<j:eventbutton id="bi-#{cc.attrs.point.index}-ev-3" title="Relative Time" label="3" onclick="requestChangeAttributeValue('bi-#{cc.attrs.point.index}', 'eventType', {'group': 2, 'variation': 3})" disabled="true" />
 				</p:outputPanel>
 			</h:panelGrid>
 		</p:dialog>
