--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -11,6 +11,7 @@
 	xmlns:jdnp3="http://java.sun.com/jsf/composite/jdnp3">
 <h:head>
 	<h:outputScript library="js" name="schedule.js" />
+	<h:outputScript library="js" name="binary.js" />
 	<h:outputScript library="js" name="main.js" />
 </h:head>
 
