--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/analogInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/analogInput.xhtml
@@ -7,7 +7,8 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:co="http://java.sun.com/jsf/composite"
-	xmlns:j="http://sf.net/jdnp3/facelets">
+	xmlns:j="http://sf.net/jdnp3/facelets"
+	xmlns:p="http://primefaces.org/ui">
 	
 <co:interface>
 	<co:attribute name="id" />
@@ -15,18 +16,62 @@
 
 <co:implementation>
 	<ui:composition>
+		<h:outputScript library="js" name="analog.js" />
+		
 		<div style="font-size: 0px;">
 			<div class="text-field">
-				<h:inputText id="ai-#{cc.attrs.id}-value" styleClass="text-field-value" title="Value" />
+				<h:outputText id="ai-#{cc.attrs.point.index}-value" styleClass="text-field-value" title="Value" />
 			</div>
-			<j:dipswitch id="ai-#{cc.attrs.id}-re" title="Reference Error" abbreviation="RE" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-or" title="Over Range" abbreviation="OR" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-lf" title="Local Forced" abbreviation="LF" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-rf" title="Remote Forced" abbreviation="RF" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-cl" title="Communications Lost" abbreviation="CL" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-rs" title="Restart" abbreviation="RS" />
-			<j:dipswitch id="ai-#{cc.attrs.id}-ol" title="Online" abbreviation="OL" value="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-re" title="Reference Error" abbreviation="RE" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'referenceError', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').referenceError)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-or" title="Over Range" abbreviation="OR" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'overRange', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').overRange)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-lf" title="Local Forced" abbreviation="LF" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'localForced', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').localForced)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-rf" title="Remote Forced" abbreviation="RF" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'remoteForced', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').remoteForced)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-cl" title="Communications Lost" abbreviation="CL" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'communicationsLost', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').communicationsLost)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-rs" title="Restart" abbreviation="RS" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'restart', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').restart)" disabled="true" />
+			<j:dipswitch id="ai-#{cc.attrs.point.index}-ol" title="Online" abbreviation="OL" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'online', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').online)" disabled="true" />
+
+			<div class="menu-button" style="font-size: 14px; display: inline-block; width: 34px; height: 42px; overflow: hidden;">
+				<p:commandButton style="width: 100%; height: 100%" id="ai-options#{cc.attrs.point.index}" value="" type="button" icon="ui-icon-extlink" />
+				<p:tieredMenu id="ai-menu#{cc.attrs.point.index}" overlay="true" trigger="ai-options#{cc.attrs.point.index}" my="left top" at="left bottom">
+					<p:menuitem value="Create Event" onclick="$('[id$=&quot;ai-menu#{cc.attrs.point.index}&quot;]').toggle(); requestEvent('ai-#{cc.attrs.point.index}');" />
+					<p:separator />
+					<p:menuitem value="Edit" onclick="$('[id$=&quot;ai-menu#{cc.attrs.point.index}&quot;]').toggle(); PF('ai-edit#{cc.attrs.point.index}').show();" />
+				</p:tieredMenu>
+			</div>
 		</div>
+
+		<p:dialog header="Analog Input #{cc.attrs.point.index}" widgetVar="ai-edit#{cc.attrs.point.index}" modal="true">
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+				<h:outputText value="Event Class:" />
+				<p:outputPanel>
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-cl-1" title="Class 1" label="1" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventClass', 1)" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-cl-2" title="Class 2" label="2" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventClass', 2)" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-cl-3" title="Class 3" label="3" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventClass', 3)" disabled="true" />
+				</p:outputPanel>
+				<h:outputText value="Preferred Static Type" />
+				<p:outputPanel>
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-0" title="Any" label="0" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 0})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-1" title="32-bit Integer with Flags" label="1" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 1})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-2" title="16-bit Integer with Flags" label="2" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 2})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-3" title="32-bit Integer without Flags" label="3" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 3})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-4" title="16-bit Integer without Flags" label="4" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 4})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-5" title="32-bit Float" label="5" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 5})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-st-6" title="64-bit Float" label="6" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'staticType', {'group': 30, 'variation': 6})" disabled="true" />
+				</p:outputPanel>
+				<h:outputText value="Preferred Event Type:" />
+				<p:outputPanel>
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-0" title="Any" label="0" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 0})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-1" title="32-bit Integer without Time" label="1" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 1})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-2" title="16-bit Integer wihtout Time" label="2" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 2})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-3" title="32-bit Integer Absolute Time" label="3" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 3})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-4" title="16-bit Integer Absolute Time" label="4" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 4})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-5" title="32-bit Float without Time" label="5" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 5})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-6" title="64-bit Float without Time" label="6" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 6})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-7" title="32-bit Float Absolute Time" label="7" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 7})" disabled="true" />
+					<j:eventbutton id="ai-#{cc.attrs.point.index}-ev-8" title="64-bit Float Absolute Time" label="8" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'eventType', {'group': 32, 'variation': 8})" disabled="true" />
+				</p:outputPanel>
+			</h:panelGrid>
+		</p:dialog>
 	</ui:composition>
 </co:implementation>
 </html>
