--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -11,6 +11,7 @@
 	xmlns:jdnp3="http://java.sun.com/jsf/composite/jdnp3">
 <h:head>
 	<h:outputScript library="js" name="schedule.js" />
+	<h:outputScript library="js" name="analog.js" />
 	<h:outputScript library="js" name="binary.js" />
 	<h:outputScript library="js" name="main.js" />
 </h:head>
@@ -34,8 +35,17 @@
 				<div style="text-align: center; display: inline-block;">
 					<p:panel header="Binary Input">
 						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<c:forEach var="point" items="#{uiPointDatabase.binaryPoints}">
+							<c:forEach var="point" items="#{uiPointDatabase.binaryInputDataPoints}">
 								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryInput point="#{point}" />
+							</c:forEach>
+						</p:panelGrid>
+					</p:panel>
+				</div>
+				<div style="text-align: center; display: inline-block;">
+					<p:panel header="Analog Input">
+						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
+							<c:forEach var="point" items="#{uiPointDatabase.analogInputDataPoints}">
+								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:analogInput point="#{point}" />
 							</c:forEach>
 						</p:panelGrid>
 					</p:panel>
