--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/analogInput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/analogInput.xhtml
@@ -19,7 +19,7 @@
 		<h:outputScript library="js" name="analog.js" />
 		
 		<div style="font-size: 0px;">
-			<div class="text-field">
+			<div class="text-field" onclick="$('[id$=ai-#{cc.attrs.point.index}-newvalue]').val($('[id$=ai-#{cc.attrs.point.index}-value]').html()); PF('ai-value#{cc.attrs.point.index}').show(); $('[id$=ai-#{cc.attrs.point.index}-newvalue]').select();">
 				<h:outputText id="ai-#{cc.attrs.point.index}-value" styleClass="text-field-value" title="Value" />
 			</div>
 			<j:dipswitch id="ai-#{cc.attrs.point.index}-re" title="Reference Error" abbreviation="RE" onclick="requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'referenceError', !jdnp3.analog.getAnalog('ai-#{cc.attrs.point.index}').referenceError)" disabled="true" />
@@ -39,6 +39,19 @@
 				</p:tieredMenu>
 			</div>
 		</div>
+
+		<p:dialog header="Analog Input Value #{cc.attrs.point.index}" widgetVar="ai-value#{cc.attrs.point.index}" modal="true">
+			<p:outputPanel>
+				<div class="text-field">
+					<h:inputText id="ai-#{cc.attrs.point.index}-newvalue" style="border: none;" styleClass="text-field-value" title="Value" onkeypress="if (event.keyCode == 13) {if ($('[id$=ai-#{cc.attrs.point.index}-newvalue]').val() == 'MAX') $('[id$=ai-#{cc.attrs.point.index}-newvalue]').val(Number.MAX_VALUE); if ($('[id$=ai-#{cc.attrs.point.index}-newvalue]').val() == 'MIN') $('[id$=ai-#{cc.attrs.point.index}-newvalue]').val(-1*Number.MAX_VALUE); requestChangeAttributeValue('ai-#{cc.attrs.point.index}', 'value', $('[id$=ai-#{cc.attrs.point.index}-newvalue]').val());} else if (event.keyCode == 27) {PF('ai-value#{cc.attrs.point.index}').hide();}" />
+				</div>
+			</p:outputPanel>
+			<p:outputPanel>
+				<div>
+					<h:outputText style="font-size: 8px;" value="Also supports Infinity, -Infinity, MAX, MIN and NaN" />
+				</div>
+			</p:outputPanel>
+		</p:dialog>
 
 		<p:dialog header="Analog Input #{cc.attrs.point.index}" widgetVar="ai-edit#{cc.attrs.point.index}" modal="true">
 			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
