--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -50,6 +50,15 @@
 						</p:panelGrid>
 					</p:panel>
 				</div>
+				<div style="text-align: center; display: inline-block;">
+					<p:panel header="Binary Output">
+						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
+							<c:forEach var="point" items="#{uiPointDatabase.binaryOutputDataPoints}">
+								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryOutput point="#{point}" />
+							</c:forEach>
+						</p:panelGrid>
+					</p:panel>
+				</div>
 			</p:outputPanel>
 		</h:form>
 	</f:view>
