Added Internal Indicators to the Outstation Web Page.

--- a/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/welcome.xhtml
@@ -13,6 +13,7 @@
 	<h:outputScript library="js" name="schedule.js" />
 	<h:outputScript library="js" name="analog.js" />
 	<h:outputScript library="js" name="binary.js" />
+	<h:outputScript library="js" name="iin.js" />
 	<h:outputScript library="js" name="main.js" />
 </h:head>
 
@@ -28,7 +29,7 @@
 				<div style="text-align: center; display: block;">
 					<p:panel header="Internal Indicators">
 						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<jdnp3:internalIndicators id="iin" />
+							<jdnp3:internalIndicators id="iin" index="0" />
 						</p:panelGrid>
 					</p:panel>
 				</div>
