--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/internalIndicators.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/internalIndicators.xhtml
@@ -10,27 +10,26 @@
 	xmlns:j="http://sf.net/jdnp3/facelets">
 	
 <co:interface>
-	<co:attribute name="id" />
-	<co:attribute name="title" />
+	<co:attribute name="index" />
 </co:interface>
 
 <co:implementation>
 	<ui:composition>
 		<div style="font-size: 0px;">
-			<j:dipswitch id="iin-1-0" title="Broadcast" abbreviation="1.0" disabled="true" />
-			<j:dipswitch id="iin-1-1" title="Class 1 Events" abbreviation="1.1" disabled="true" />
-			<j:dipswitch id="iin-1-2" title="Class 2 Events" abbreviation="1.2" disabled="true" />
-			<j:dipswitch id="iin-1-3" title="Class 3 Events" abbreviation="1.3" disabled="true" />
-			<j:dipswitch id="iin-1-4" title="Need Time" abbreviation="1.4" disabled="true" />
-			<j:dipswitch id="iin-1-5" title="Local Control" abbreviation="1.5" disabled="true" />
-			<j:dipswitch id="iin-1-6" title="Device Trouble" abbreviation="1.6" disabled="true" />
-			<j:dipswitch id="iin-1-7" title="Device Restart" abbreviation="1.7" disabled="true" />
-			<j:dipswitch id="iin-2-0" title="No Function Code Support (Request Based)" abbreviation="2.0" disabled="true" />
-			<j:dipswitch id="iin-2-1" title="Object Unknown (Request Based)" abbreviation="2.1" disabled="true" />
-			<j:dipswitch id="iin-2-2" title="Parameter Error (Request Based)" abbreviation="2.2" disabled="true" />
-			<j:dipswitch id="iin-2-3" title="Event Buffer Overflow" abbreviation="2.3" disabled="true" />
-			<j:dipswitch id="iin-2-4" title="Already Executing (Request Based)" abbreviation="2.4" disabled="true" />
-			<j:dipswitch id="iin-2-5" title="Configuration Corrupt (Request Based)" abbreviation="2.5" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-bc" title="Broadcast (Force On)" abbreviation="1.0" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'broadcast', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').broadcast)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-c1" title="Class 1 Events" abbreviation="1.1" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'class1Events', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').class1Events)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-c2" title="Class 2 Events" abbreviation="1.2" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'class2Events', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').class2Events)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-c3" title="Class 3 Events" abbreviation="1.3" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'class3Events', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').class3Events)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-nt" title="Need Time" abbreviation="1.4" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'needTime', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').needTime)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-lc" title="Local Control (Force On)" abbreviation="1.5" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'localControl', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').localControl)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-dt" title="Device Trouble (Force On)" abbreviation="1.6" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'deviceTrouble', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').deviceTrouble)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-dr" title="Device Restart" abbreviation="1.7" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'deviceRestart', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').deviceRestart)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-nf" title="No Function Code (Force On)" abbreviation="2.0" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'noFunctionCodeSupport', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').noFunctionCodeSupport)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-ou" title="Object Unknown (Force On)" abbreviation="2.1" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'objectUnknown', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').objectUnknown)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-pe" title="Parameter Error (Force On)" abbreviation="2.2" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'parameterError', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').parameterError)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-eo" title="Event Buffer Overflow (Force On)" abbreviation="2.3" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'eventBufferOverflow', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').eventBufferOverflow)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-ae" title="Already Executing (Force On)" abbreviation="2.4" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'alreadyExecuting', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').alreadyExecuting)" disabled="true" />
+			<j:dipswitch id="ii-#{cc.attrs.index}-cc" title="Configuration Corrupt (Force On)" abbreviation="2.5" onclick="requestChangeAttributeValue('ii-#{cc.attrs.index}', 'configurationCorrupt', !jdnp3.iin.getInternalIndicators('ii-#{cc.attrs.index}').configurationCorrupt)" disabled="true" />
 		</div>
 	</ui:composition>
 </co:implementation>
