--- a/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryOutput.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/resources/jdnp3/binaryOutput.xhtml
@@ -23,7 +23,44 @@
 			<j:dipswitch id="bo-#{cc.attrs.point.index}-cl" title="Communications Lost" abbreviation="CL" onclick="requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'communicationsLost', !jdnp3.binary.getBinaryOutput('bo-#{cc.attrs.point.index}').communicationsLost)" disabled="true" />
 			<j:dipswitch id="bo-#{cc.attrs.point.index}-rs" title="Restart" abbreviation="RS" onclick="requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'restart', !jdnp3.binary.getBinaryOutput('bo-#{cc.attrs.point.index}').restart)" disabled="true" />
 			<j:dipswitch id="bo-#{cc.attrs.point.index}-ol" title="Online" abbreviation="OL" onclick="requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'online', !jdnp3.binary.getBinaryOutput('bo-#{cc.attrs.point.index}').online)" disabled="true" />
+			<div class="text-field" style="width: 100px; cursor: pointer;" title="No Operation" >
+				<h:outputText styleClass="text-field-value" style="width: 100%; text-align: center;" value="-"/>
+			</div>
+			
+			<div class="menu-button" style="font-size: 14px; display: inline-block; width: 34px; height: 42px; overflow: hidden;">
+				<p:commandButton style="width: 100%; height: 100%" id="bo-options#{cc.attrs.point.index}" value="" type="button" icon="ui-icon-extlink" />
+				<p:tieredMenu id="bo-menu#{cc.attrs.point.index}" overlay="true" trigger="bo-options#{cc.attrs.point.index}" my="left top" at="left bottom">
+					<p:menuitem value="Create Event" onclick="$('[id$=&quot;bo-menu#{cc.attrs.point.index}&quot;]').toggle(); requestEvent('bo-#{cc.attrs.point.index}');" />
+					<p:menuitem value="Create Control Event" onclick="$('[id$=&quot;bo-menu#{cc.attrs.point.index}&quot;]').toggle(); requestEvent('bc-#{cc.attrs.point.index}');" />
+					<p:separator />
+					<p:menuitem value="Edit" onclick="$('[id$=&quot;bo-menu#{cc.attrs.point.index}&quot;]').toggle(); PF('bo-edit#{cc.attrs.point.index}').show();" />
+				</p:tieredMenu>
+			</div>
 		</div>
+
+		<p:dialog header="Binary Output #{cc.attrs.point.index}" widgetVar="bo-edit#{cc.attrs.point.index}" modal="true">
+			<h:panelGrid columns="2" style="margin-bottom:10px" cellpadding="5">
+				<h:outputText value="Return Status:" />
+					<p:commandButton style="width: 100%; height: 100%" id="bo-status-options#{cc.attrs.point.index}" value="SUCCESS" type="button" icon="ui-icon-extlink" />
+					<p:tieredMenu id="bo-status-menu#{cc.attrs.point.index}" overlay="true" trigger="bo-status-options#{cc.attrs.point.index}" my="left top" at="left bottom">
+						<p:menuitem value="Success" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'SUCCESS')" />
+						<p:separator />
+						<p:menuitem value="Timeout" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'TIMEOUT')" />
+						<p:menuitem value="No Select" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'NO_SELECT')" />
+						<p:menuitem value="Format Error" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'FORMAT_ERROR')" />
+						<p:menuitem value="Not Supported" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'NOT_SUPPORTED')" />
+						<p:menuitem value="Already Active" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'ALREADY_ACTIVE')" />
+						<p:menuitem value="Hardware Error" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'HARDWARE_ERROR')" />
+						<p:menuitem value="Local" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'LOCAL')" />
+						<p:menuitem value="Too Many Objects" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'TOO_MANY_OBJS')" />
+						<p:menuitem value="Not Authorised" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'NOT_AUTHORIZED')" />
+						<p:menuitem value="Automation Inhibit" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'AUTOMATION_INHIBIT')" />
+						<p:menuitem value="Processing Limited" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'PROCESSING_LIMITED')" />
+						<p:menuitem value="Out of Range" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'OUT_OF_RANGE')" />
+						<p:menuitem value="Non-Participating" onclick="$('[id$=&quot;bo-status-menu#{cc.attrs.point.index}&quot;]').toggle(); requestChangeAttributeValue('bo-#{cc.attrs.point.index}', 'statusCode', 'NON_PARTICIPATING')" />
+					</p:tieredMenu>
+			</h:panelGrid>
+		</p:dialog>
 	</ui:composition>
 </co:implementation>
 </html>
