Changed the decoder to be similar to the encoder.  It now has a context that allows a decoder to operate on a single item.

--- a/jdnp3-ui-web-outstation/src/main/webapp/index.html
+++ b/jdnp3-ui-web-outstation/src/main/webapp/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=/welcome.jsf" />
+<meta http-equiv="refresh" content="0; url=/station.jsf" />
 </head>
 <body>
 	<p>
-		Redirecting to the landing page.  Please click <a href="/welcome.jsf">here</a> if you are not redirected.
+		Redirecting to the landing page.  Please click <a href="/station.jsf">here</a> if you are not redirected.
 	</p>
 </body>
 </html>
