--- a/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/device.xhtml
@@ -49,33 +49,39 @@
 						</p:panelGrid>
 					</p:panel>
 				</div>
-				<div style="text-align: center; display: inline-block;">
-					<p:panel header="Binary Input">
-						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<c:forEach var="point" items="#{uiPointDatabase.getBinaryInputDataPoints(param['stationCode'], param['deviceCode'])}">
-								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryInput point="#{point}" />
-							</c:forEach>
-						</p:panelGrid>
-					</p:panel>
-				</div>
-				<div style="text-align: center; display: inline-block;">
-					<p:panel header="Binary Output">
-						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<c:forEach var="point" items="#{uiPointDatabase.getBinaryOutputDataPoints(param['stationCode'], param['deviceCode'])}">
-								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryOutput point="#{point}" />
-							</c:forEach>
-						</p:panelGrid>
-					</p:panel>
-				</div>
-				<div style="text-align: center; display: inline-block;">
-					<p:panel header="Analog Input">
-						<p:panelGrid style="margin: auto; text-align: right;" columns="2">
-							<c:forEach var="point" items="#{uiPointDatabase.getAnalogInputDataPoints(param['stationCode'], param['deviceCode'])}">
-								<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:analogInput point="#{point}" />
-							</c:forEach>
-						</p:panelGrid>
-					</p:panel>
-				</div>
+				<c:if test="#{uiPointDatabase.getBinaryInputDataPoints(param['stationCode'], param['deviceCode']).size() > 0}">
+					<div style="text-align: center; display: inline-block;">
+						<p:panel header="Binary Input">
+							<p:panelGrid style="margin: auto; text-align: right;" columns="2">
+								<c:forEach var="point" items="#{uiPointDatabase.getBinaryInputDataPoints(param['stationCode'], param['deviceCode'])}">
+									<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryInput point="#{point}" />
+								</c:forEach>
+							</p:panelGrid>
+						</p:panel>
+					</div>
+				</c:if>
+				<c:if test="#{uiPointDatabase.getBinaryOutputDataPoints(param['stationCode'], param['deviceCode']).size() > 0}">
+					<div style="text-align: center; display: inline-block;">
+						<p:panel header="Binary Output">
+							<p:panelGrid style="margin: auto; text-align: right;" columns="2">
+								<c:forEach var="point" items="#{uiPointDatabase.getBinaryOutputDataPoints(param['stationCode'], param['deviceCode'])}">
+									<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:binaryOutput point="#{point}" />
+								</c:forEach>
+							</p:panelGrid>
+						</p:panel>
+					</div>
+				</c:if>
+				<c:if test="#{uiPointDatabase.getAnalogInputDataPoints(param['stationCode'], param['deviceCode']).size() > 0}">
+					<div style="text-align: center; display: inline-block;">
+						<p:panel header="Analog Input">
+							<p:panelGrid style="margin: auto; text-align: right;" columns="2">
+								<c:forEach var="point" items="#{uiPointDatabase.getAnalogInputDataPoints(param['stationCode'], param['deviceCode'])}">
+									<h:outputText style="margin-right: 10px" value="#{point.name}" /><jdnp3:analogInput point="#{point}" />
+								</c:forEach>
+							</p:panelGrid>
+						</p:panel>
+					</div>
+				</c:if>
 			</p:outputPanel>
 		</h:form>
 	</f:view>
