--- a/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
+++ b/jdnp3-ui-web-outstation/src/main/webapp/station.xhtml
@@ -55,6 +55,7 @@
 				</p:panel>
 				<p:panel header="Bindings">
 					<p:panelGrid columns="2">
+						Coming Soon
 					</p:panelGrid>
 				</p:panel>
 			</p:layoutUnit>
